--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" >
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
@@ -8,12 +9,12 @@
 <body>
 
 <div>
-    <form method="POST" action="/login">
+    <form method="POST" action="/authorization" th:object="${user}">
         <h2>Вход в систему</h2>
         <div>
-            <input name="username" type="text" placeholder="Username" autofocus="true"/>
-            <input name="password" type="password" placeholder="Password"/>
-            <button type="submit">Log In</button>
+            <input name="username" th:field="${user.username}" type="text" placeholder="Username" autofocus="true"/>
+            <input name="password" th:field="${user.password}" type="password" placeholder="Password"/>
+            <button type="submit">Войти</button>
             <h4><a href="/registration">Зарегистрироваться</a></h4>
         </div>
     </form>
@@ -21,6 +22,7 @@
 
 <br>
 <a href="/">Главная</a>
+<a href="/forgot_password">Забыли пароль?</a>
 
 </body>
 </html>
