--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -15,6 +15,9 @@
             <input type="text" th:field="${user.username}" placeholder="Username" autofocus="true"/>
         </div>
         <div>
+            <input type="text" th:field="${user.email}" placeholder="email"/>
+        </div>
+        <div>
             <input type="password" th:field="${user.password}" placeholder="Password"/>
         </div>
         <div>
