--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -34,7 +34,7 @@
                th:field="${user.password}">
         <input type="password" name="pass" id="reg-pass-field" placeholder="Повторите пароль"
                th:field="${user.passwordConfirm}">
-        <input type="submit" value="Зарегистрироваться" class="button"/>
+        <input id="reg-btn" type="submit" value="Зарегистрироваться" class="button"/>
     </form>
 
 </main>
