--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -41,8 +41,6 @@ Main VMD page
 </div>
 
 
-
-
 <br>
 All users list:
 <div>
@@ -71,6 +69,10 @@ All users list:
 <a href="/registration">Регистрация</a>
 <br>
 <a href="/friends">Друзья</a>
+
+<div sec:authorize="hasRole('ADMIN')">
+    <a href="/admin">Администрирование</a>
+</div>
 
 <div sec:authorize="isAuthenticated()">
     <form method="POST" modelAttribute="userForm" action="/exit">
