added simple user page settings

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -78,6 +78,8 @@ All users list:
     <br>
     <a href="/friends">Друзья</a>
     <br>
+    <a href="/settings">Настройки</a>
+    <br>
     <form method="POST" modelAttribute="userForm" action="/exit">
         <button type="submit">Выйти</button>
     </form>
