--- a/src/main/resources/templates/userPage.html
+++ b/src/main/resources/templates/userPage.html
@@ -6,10 +6,17 @@
     <title th:text="${curr_info.name}"></title>
 </head>
 <body>
-    <h3 th:text="${curr_info.name}"></h3>
+    <h2 th:text="${curr_info.name}"></h2>
     <b>Username: </b> <i th:text="${curr_info.username}"></i></br>
     <b>User id: </b> <i th:text="${curr_info.userId}"></i></br>
     <b>Birth date: </b> <i th:text="${curr_info.birthDate}"></i></br>
     <b>Birth town: </b> <i th:text="${curr_info.birthTown}"></i></br>
+
+    <h2>Posts: </h2>
+    <div th:each="post : ${posts}">
+        <h4 th:text="${post.sender}"></h4>
+        <b>Sent at: </b> <i th:text="${post.sentTime}"></i></br>
+        <b>Message: </b> <i th:text="${post.content}"></i></br>
+    </div>
 </body>
 </html>
