--- a/src/main/resources/templates/chat.html
+++ b/src/main/resources/templates/chat.html
@@ -21,6 +21,9 @@
 <ul id="messageArea">
 </ul>
 
+<button id="startButton"> Start </button>
+<button id="stopButton"> Stop </button>
+
 <div id="chat-page" class="hidden">
     <form id="messageForm" name="messageForm">
         <input type="text" id="message" placeholder="Type a message..."/>
