Some tiny changes

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -22,8 +22,8 @@
 <main>
     <div id="text">
         <img th:src="@{/images/logo_opacity.png}" alt="logo" id="logo"/>
-        <p id="title">VMD - первая в мире социальная сеть убийца</p>
-        <p id="subtitle">Мы не скрываем, что работаем на ФСБ</p>
+        <p id="title">Социальная сеть VMD</p>
+        <p id="subtitle">Powered by Magic Duck</p>
     </div>
     <div id="form" class="flat-form">
         <ul class="tabs">
