--- a/src/main/resources/templates/userPage.html
+++ b/src/main/resources/templates/userPage.html
@@ -20,7 +20,7 @@
 
     <h2>Posts: </h2>
     <div th:each="post : ${posts}">
-        <h3 th:text="${post.sender}"></h3>
+        <a th:href = "|/user/${post.sender}|"><h3 th:text="${post.sender}"></h3></a>
         <b>Sent at: </b> <i th:text="${post.sentTime}"></i></br>
         <b>Message: </b> <i th:text="${post.content}"></i></br>
     </div>
