--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -12,6 +12,16 @@
 </head>
 <body>
 
+
+
+<script type="text/javascript" th:inline="javascript">
+        var image = new Image();
+        image.src = 'data:image/jpeg;base64,' + [[${bytes}]];
+        document.body.appendChild(image);
+</script>
+
+
+
 <div id="root"></div>
 
 <!--<script type="text/babel" th:src="@{/js/test.js}"></script>-->
