--- a/src/main/resources/templates/verification.html
+++ b/src/main/resources/templates/verification.html
@@ -109,7 +109,7 @@
         text-align: center;
         
         color: #000000;">Спасибо за прохождение регистрации</p>
-    <button id="thanks-btn"><a href="/login" style="text-decoration: none; color: #000;">Продолжить</a>
+    <button id="thanks-btn"><a href="/authorization" style="text-decoration: none; color: #000;">Продолжить</a>
     </button>
 </main>
 </body>
